# RustyMind

./: .dockerignore  .env.example  .gitignore  COMPARISON.md  Cargo.toml  DOCKER_GUIDE.md  Dockerfile  MIGRATION_GUIDE.md  README.md  RUST_BACKEND_SUMMARY.md  config.toml  docker-compose.yml  jenkinsfile
scripts/: build.sh  dev.sh  test.sh
src/: config.rs  main.rs
src/handlers/: chat.rs  mod.rs  queue.rs  stats.rs
src/models/: chat.rs
src/services/: batch.rs  cache.rs  mod.rs  ollama.rs  queue.rs
src/utils/: mod.rs
